@@ -12,38 +12,24 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.9.2</junit.version>
+        <javafx.version>21.0.1</javafx.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>eu.hansolo.fx</groupId>
-            <artifactId>countries</artifactId>
-            <version>21.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>eu.hansolo</groupId>
-            <artifactId>toolboxfx</artifactId>
-            <version>21.0.3</version>
-        </dependency>
-        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>21-ea+24</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>21-ea+24</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>21-ea+24</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-media</artifactId>
-            <version>21-ea+24</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -54,23 +40,11 @@
             <groupId>com.dlsc.formsfx</groupId>
             <artifactId>formsfx-core</artifactId>
             <version>11.6.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>net.synedra</groupId>
             <artifactId>validatorfx</artifactId>
             <version>0.4.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
@@ -86,23 +60,31 @@
             <groupId>eu.hansolo</groupId>
             <artifactId>tilesfx</artifactId>
             <version>17.1.17</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
             <version>17.2</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.openjfx</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>eu.hansolo.fx</groupId>
+            <artifactId>countries</artifactId>
+            <version>21.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.hansolo.fx</groupId>
+            <artifactId>heatmap</artifactId>
+            <version>21.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.hansolo</groupId>
+            <artifactId>toolboxfx</artifactId>
+            <version>21.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.hansolo</groupId>
+            <artifactId>toolbox</artifactId>
+            <version>21.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -118,6 +100,7 @@
         </dependency>
     </dependencies>
 
+
     <build>
         <plugins>
             <plugin>
@@ -127,24 +110,224 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
                         <configuration>
-                            <mainClass>com.example.hunter/com.example.hunter.HelloApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <outputDirectory>${project.build.directory}/deps</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.moditect</groupId>
+                <artifactId>moditect-maven-plugin</artifactId>
+                <version>1.0.0.RC1</version>
+                <executions>
+                    <execution>
+                        <id>add-module-info-to-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>add-module-info</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
+                            <overwriteExistingFiles>true</overwriteExistingFiles>
+                            <modules>
+                                <module>
+                                    <artifact>
+                                        <groupId>org.kordamp.bootstrapfx</groupId>
+                                        <artifactId>bootstrapfx-core</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module org.kordamp.bootstrapfx.core {
+                                        requires javafx.graphics;
+                                        requires javafx.controls;
+                                        exports org.kordamp.bootstrapfx;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>org.kordamp.ikonli</groupId>
+                                        <artifactId>ikonli-javafx</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module org.kordamp.ikonli.javafx {
+                                        requires javafx.graphics;
+                                        requires org.kordamp.ikonli.core;
+                                        exports org.kordamp.ikonli.javafx;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>net.synedra</groupId>
+                                        <artifactId>validatorfx</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module net.synedra.validatorfx {
+                                        requires javafx.base;
+                                        requires javafx.controls;
+                                        exports net.synedra.validatorfx;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>eu.hansolo.fx</groupId>
+                                        <artifactId>countries</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module eu.hansolo.fx.countries {
+                                        requires javafx.base;
+                                        requires javafx.graphics;
+                                        exports eu.hansolo.fx.countries;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>eu.hansolo.fx</groupId>
+                                        <artifactId>heatmap</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module eu.hansolo.fx.heatmap {
+                                        requires javafx.base;
+                                        requires javafx.graphics;
+                                        exports eu.hansolo.fx.heatmap;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>eu.hansolo</groupId>
+                                        <artifactId>toolboxfx</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module eu.hansolo.toolboxfx {
+                                        requires javafx.base;
+                                        requires javafx.graphics;
+                                        exports eu.hansolo.toolboxfx;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                                <module>
+                                    <artifact>
+                                        <groupId>eu.hansolo</groupId>
+                                        <artifactId>toolbox</artifactId>
+                                    </artifact>
+                                    <moduleInfoSource>
+                                        module eu.hansolo.toolbox {
+                                        exports eu.hansolo.toolbox;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                            </modules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>add-module-info-to-project</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>add-module-info</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <overwriteExistingFiles>true</overwriteExistingFiles>
+                            <modules>
+                                <module>
+                                    <file>${project.build.directory}/${project.artifactId}-${project.version}.jar</file>
+                                    <mainClass>com.example.hunter.GameStart</mainClass>
+                                    <moduleInfoSource>
+                                        module com.example.hunter {
+                                        requires javafx.controls;
+                                        requires javafx.fxml;
+                                        requires javafx.web;
+                                        requires org.controlsfx.controls;
+                                        requires com.dlsc.formsfx;
+                                        requires net.synedra.validatorfx;
+                                        requires org.kordamp.ikonli.javafx;
+                                        requires org.kordamp.bootstrapfx.core;
+                                        requires eu.hansolo.tilesfx;
+                                        requires com.almasb.fxgl.all;
+                                        requires java.prefs;
+                                        requires eu.hansolo.fx.countries;
+                                        requires eu.hansolo.fx.heatmap;
+                                        requires eu.hansolo.toolboxfx;
+                                        requires eu.hansolo.toolbox;
+
+                                        exports com.example.hunter;
+                                        exports com.example.hunter.enemies;
+                                        exports com.example.hunter.projectiles;
+
+                                        opens com.example.hunter to javafx.fxml;
+                                        opens com.example.hunter.enemies to javafx.fxml;
+                                        opens com.example.hunter.projectiles to javafx.fxml;
+                                        }
+                                    </moduleInfoSource>
+                                </module>
+                            </modules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-runtime-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>create-runtime-image</goal>
+                        </goals>
+                        <configuration>
+                            <modulePath>
+                                <path>${project.build.directory}/modules</path>
+                                <path>${project.build.directory}/deps</path>
+                                <path>${project.build.directory}/classes</path>
+                            </modulePath>
+                            <modules>
+                                <module>java.base</module>
+                                <module>java.prefs</module>
+                                <module>javafx.base</module>
+                                <module>javafx.controls</module>
+                                <module>javafx.fxml</module>
+                                <module>javafx.web</module>
+                                <module>javafx.graphics</module>
+                                <module>java.xml</module>
+                                <module>jdk.unsupported</module>
+                                <module>org.controlsfx.controls</module>
+                                <module>com.dlsc.formsfx</module>
+                                <module>net.synedra.validatorfx</module>
+                                <module>org.kordamp.ikonli.javafx</module>
+                                <module>org.kordamp.bootstrapfx.core</module>
+                                <module>eu.hansolo.tilesfx</module>
+                                <module>com.almasb.fxgl.all</module>
+                                <module>eu.hansolo.fx.countries</module>
+                                <module>eu.hansolo.fx.heatmap</module>
+                                <module>eu.hansolo.toolboxfx</module>
+                                <module>eu.hansolo.toolbox</module>
+                                <module>com.example.hunter</module>
+                            </modules>
+                            <launcher>
+                                <name>hunter</name>
+                                <module>com.example.hunter/com.example.hunter.GameStart</module>
+                            </launcher>
+                            <outputDirectory>
+                                ${project.build.directory}/hunter-image
+                            </outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
